update_AI_button_question_creation_popup

--- a/lib/templates/chooser.mustache
+++ b/lib/templates/chooser.mustache
@@ -70,6 +70,7 @@
                 <div class="submitbuttons">
                     <input type="submit" name="submitbutton" class="submitbutton btn btn-primary" value="{{#cleanstr}}add{{/cleanstr}}">
                     <input type="submit" name="addcancel" class="addcancel btn btn-secondary" value="{{#cleanstr}}cancel{{/cleanstr}}">
+                    <button class="btn btn-dark my-custom-button">Generate AI Question</button>
                 </div>
 
             </form>
