--- a/theme/alpha/templates/core/datafilter/filter.mustache
+++ b/theme/alpha/templates/core/datafilter/filter.mustache
@@ -58,6 +58,7 @@
             </span>
             <span class="ml-2">{{#str}}addcondition{{/str}}</span>
         </button>
+        <button class="btn btn-dark my-custom-button">Generate AI Question</button>
         <button data-filteraction="reset" type="button" class="btn btn-sm btn-outline-secondary ml-auto mr-md-2 mb-2 mb-md-0">{{#str}}clearfilters{{/str}}</button>
         <button data-filteraction="apply" type="button" class="btn btn-sm btn-primary mb-2 mb-md-0 mx-0">{{#str}}applyfilters{{/str}}</button>
     </div>
