--- a/mod/quiz/accessrule/quizproctoring/styles.css
+++ b/mod/quiz/accessrule/quizproctoring/styles.css
@@ -1,7 +1,7 @@
 #page-mod-quiz-attempt .quizaccess_quizproctoring-video {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: 425px;
+    left: 1000px;
     z-index: 1000;
     width: 240px;
 }
