--- a/theme/alpha/templates/kopera_users.mustache
+++ b/theme/alpha/templates/kopera_users.mustache
@@ -1,9 +1,37 @@
 <div class="user-list-container">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h3>{{#str}}userlist, theme_alpha{{/str}}</h3>
+        <div class="d-flex align-items-center">
+            <div class="search-box mr-3">
+                <form class="user-search-form" action="" method="get">
+                    <div class="input-group">
+                        <input type="text" 
+                               class="form-control" 
+                               id="searchUsers" 
+                               name="search" 
+                               value="{{search}}" 
+                               placeholder="{{#str}}searchusers, theme_alpha{{/str}}">
+                        <input type="hidden" name="sort" value="{{sort}}">
+                        <input type="hidden" name="direction" value="{{direction}}">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="showing-info">
+                {{#str}}showing, theme_alpha{{/str}} {{showing_start}}-{{showing_end}} {{#str}}of, theme_alpha{{/str}} {{total_users}} {{#str}}users, theme_alpha{{/str}}
+            </div>
+        </div>
+    </div>
+
     <div class="table-responsive">
         <table class="table table-striped">
-            <thead class="user-list-header bg-primary text-white">
+            <thead class="user-list-header">
                 <tr>
-                    <th class="header {{#id_sorted}}sorted-{{direction}}{{/id_sorted}}" 
+                    <th class="{{#id_sorted}}sorted-{{direction}}{{/id_sorted}}" 
                         data-sort="id">
                         ID {{#id_sorted}}{{#str}}sorted_{{direction}}{{/str}}{{/id_sorted}}
                     </th>
@@ -28,4 +56,45 @@
             </tbody>
         </table>
     </div>
+
+    {{^users}}
+    <div class="alert alert-info">
+        {{#str}}nouserfound, theme_alpha{{/str}}
+    </div>
+    {{/users}}
+
+    {{#pagination}}
+    <nav aria-label="User list pagination" class="pagination-container mt-4">
+        <ul class="pagination justify-content-center">
+            {{#previousurl}}
+            <li class="page-item">
+                <a class="page-link" href="{{previousurl}}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            {{/previousurl}}
+            
+            {{#pages}}
+                {{#current}}
+                <li class="page-item active">
+                    <span class="page-link">{{number}}</span>
+                </li>
+                {{/current}}
+                {{^current}}
+                <li class="page-item">
+                    <a class="page-link" href="{{url}}">{{number}}</a>
+                </li>
+                {{/current}}
+            {{/pages}}
+            
+            {{#nexturl}}
+            <li class="page-item">
+                <a class="page-link" href="{{nexturl}}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+            {{/nexturl}}
+        </ul>
+    </nav>
+    {{/pagination}}
 </div>
