--- a/theme/alpha/templates/my/dropdown.mustache
+++ b/theme/alpha/templates/my/dropdown.mustache
@@ -25,21 +25,23 @@
         "manageurl": "https://moodle.test/course/management.php?categoryid=1"
     }
 }}
-<div class="btn-group">
-    <!-- Set as a link to appease Goutte behat. -->
-    <a href="#" class="btn btn-secondary btn-icon rounded-circle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="{{#str}}coursemanagementoptions, my{{/str}}">
-        <svg width="24" height="24" fill="none" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12Z"></path>
-            <path fill="currentColor" d="M13 8C13 8.55228 12.5523 9 12 9C11.4477 9 11 8.55228 11 8C11 7.44772 11.4477 7 12 7C12.5523 7 13 7.44772 13 8Z"></path>
-            <path fill="currentColor" d="M13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16Z"></path>
-        </svg>
-    </a>
-    <div class="dropdown-menu dropdown-menu-right">
-        {{#newcourseurl}}
-            <a class="dropdown-item" href="{{newcourseurl}}">{{#str}}newcourse, core{{/str}}</a>
-        {{/newcourseurl}}
-        {{#manageurl}}
-            <a class="dropdown-item" href="{{manageurl}}">{{#str}}managecourses, core{{/str}}</a>
-        {{/manageurl}}
-    </div>
+<div class="course-actions d-flex align-items-center">
+    {{#newcourseurl}}
+        <a href="{{newcourseurl}}" class="btn btn-primary mr-2">
+            <svg class="mr-2" width="18" height="18" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v12m-6-6h12"/>
+            </svg>
+            {{#str}}newcourse, core{{/str}}
+        </a>
+    {{/newcourseurl}}
+    
+    {{#manageurl}}
+        <a href="{{manageurl}}" class="btn btn-secondary">
+            <svg class="mr-2" width="18" height="18" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"/>
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+            </svg>
+            {{#str}}managecourses, core{{/str}}
+        </a>
+    {{/manageurl}}
 </div>
