--- a/theme/alpha/templates/block_timeline/main.mustache
+++ b/theme/alpha/templates/block_timeline/main.mustache
@@ -30,11 +30,12 @@
                 {{> block_timeline/nav-day-filter }}
             </div>
             <div class="col-sm d-flex justify-content-end">
+                {{> block_timeline/nav-search }}
                 {{> block_timeline/nav-view-selector }}
             </div>
-            <div class="col-12 mt-2 mb-1 d-flex justify-content-end nav-search">
-                {{> block_timeline/nav-search }}
-            </div>
+           {{!<div class="col-12 mt-2 mb-1 d-flex justify-content-end nav-search">
+                
+            </div>}}
         </div>
     </div>
     <div class="w-100 p-0">
