--- a/theme/alpha/scss/moodle/book.scss
+++ b/theme/alpha/scss/moodle/book.scss
@@ -206,6 +206,7 @@
     border-style: solid solid solid dashed;
     border-color: $gray-300 $gray-200 $gray-300 $gray-300;
     border-radius: $btn-border-radius;
+    color: #fff;
 
     @include media-breakpoint-between(xs, sm) {
         padding: 10px !important;
