--- a/theme/alpha/style/editor.css
+++ b/theme/alpha/style/editor.css
@@ -8047,8 +8047,10 @@ select.quickgrade:-moz-focusring {
   margin-bottom: 0.75rem;
   font-size: 0.75rem;
   font-weight: 500;
-  color: #626068;
+  color: #fff;
   text-transform: uppercase;
+  background: #001a47;
+  padding: 10px;
 }
 .theme-dark .card-title {
   color: #9499b0;
@@ -26355,7 +26357,7 @@ table.calendartable caption {
   align-items: flex-start;
 }
 .rui-course-card-deck .rui-course-card {
-  width: 100%;
+  width: 97%;
 }
 .drawer-right .rui-course-card-deck .rui-course-card {
   min-width: 280px;
@@ -40523,7 +40525,7 @@ table .userinitials, .aabtn .userinitials {
 .book_content:after {
   content: "";
   width: 10px;
-  height: 100%;
+  /* height: 100%; */
   position: absolute;
   top: 0;
   border-radius: 7px;
@@ -49156,9 +49158,10 @@ span[data-flexitour=container] .modal-dialog .modal-content .modal-footer.minima
   margin: 0 0 20px;
   width: 100%;
   position: relative;
-  display: inline-flex;
+  display: none;
+  /* display: inline-flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 .rui-course-header .page-header-content,
 .page-header-content .rui-title-container,
@@ -49585,7 +49588,7 @@ body:not(#rui-lang-btn).rui-navbar-lang {
 
 #page-enrol-index .main-content {
   margin: 0 auto;
-  padding: 40px 60px !important;
+  /* padding: 40px 60px !important; */
   width: 860px;
 }
 @media (max-width: 1079.98px) {
@@ -49604,7 +49607,7 @@ body:not(#rui-lang-btn).rui-navbar-lang {
   margin-top: 0.5rem;
 }
 #page-enrol-index .main-content .info {
-  margin-top: 30px;
+  margin-top: 10px;
   background-color: #f9f9fa;
   border-radius: 7px;
 }
