BBT_Online_class_API-token_external_issue

--- a/theme/alpha/style/editor.css
+++ b/theme/alpha/style/editor.css
@@ -18402,7 +18402,7 @@ table .inplaceeditable.inplaceeditingon {
 .inplaceeditable .quickeditlink {
   width: max-content;
   max-width: 300px;
-  color: inherit;
+  /* color: inherit; */
   text-decoration: inherit;
   z-index: 2;
 }
