update_session_by_joinurl-banner_section-Create_new_teacher API

--- a/theme/alpha/templates/tmpl-frontpage.mustache
+++ b/theme/alpha/templates/tmpl-frontpage.mustache
@@ -82,13 +82,13 @@
                 <p class="text-size-15 md:text-lg text-white font-medium mb-45px">
                     {{#str}} ai_learning_description, theme_alpha {{/str}}
                 </p>
-                <div class="banner-buttons">
-                    <a href="{{config.wwwroot}}/course/index.php" class="mb-8 text-sm md:text-size-15 font-semibold text-darkdeep2 bg-whiteColor border border-whiteColor px-5 md:px-30px py-3 md:py-4 hover:text-whiteColor hover:bg-darkblack rounded inline-block mr-6px md:mr-30px shadow-hero-action">
-                        {{#str}} view_courses, theme_alpha {{/str}}
-                    </a>
-                    <a href="https://lms.atlearn.in/login/index.php" class="text-sm md:text-size-15 font-semibold text-whiteColor py-3 md:py-4 ml-5 hover:text-secondaryColor inline-block">
+                <div class="banner-buttons">                 
+                    <a href="https://lms.atlearn.in/login/index.php" class="text-sm md:text-size-15 font-semibold text-whiteColor bg-whiteColor border border-whiteColor px-5 md:px-30px py-3 md:py-4 hover:text-whiteColor hover:bg-darkblack rounded inline-block mr-6px md:mr-30px shadow-hero-action">
                         {{#str}} create_course, theme_alpha {{/str}}
                         <i class="icofont-long-arrow-right"></i>
+                    </a>
+                     <a href="https://www.atlearn.in/join-meetings" class="mb-8 ml-3 text-sm md:text-size-15 font-semibold text-whiteColor bg-whiteColor border border-whiteColor px-5 md:px-30px py-3 md:py-4 hover:text-whiteColor hover:bg-darkblack rounded inline-block mr-6px md:mr-30px shadow-hero-action">
+                        {{#str}} view_meeting, theme_alpha {{/str}}
                     </a>
                 </div>
             </div>
