result_page_UI_changes-teacher_image_pix_changes

--- a/theme/alpha/scss/moodle/core.scss
+++ b/theme/alpha/scss/moodle/core.scss
@@ -514,6 +514,9 @@ a.autolink.glossary:hover {
 .collapsible-actions {
     display: none;
     text-align: right;
+    position: relative;
+    bottom: 40px;
+
 }
 
 .jsenabled .collapsible-actions {
