--- a/theme/alpha/scss/moodle/question.scss
+++ b/theme/alpha/scss/moodle/question.scss
@@ -2273,7 +2273,7 @@ table#categoryquestions {
                     position: sticky;
                     top: $navbar-height;
                     z-index: $zindex-fixed;
-                    background-color: $container-bg;
+                    background-color: #001a47;
                 }
             } 
         }
