Add_my_grades_by_student_some_table_header_UI

--- a/theme/alpha/templates/quiz_list.mustache
+++ b/theme/alpha/templates/quiz_list.mustache
@@ -32,16 +32,16 @@
         <table class="table table-striped">
             <thead class="quiz-list-header">
                 <tr>
-                    <th class="{{#id_sorted}}sorted-{{direction}}{{/id_sorted}}" data-sort="id">
+                    <th style="color:#fff;" class="{{#id_sorted}}sorted-{{direction}}{{/id_sorted}}" data-sort="id">
                         ID
                     </th>
-                    <th class="{{#name_sorted}}sorted-{{direction}}{{/name_sorted}}" data-sort="name">
+                    <th style="color:#fff;" class="{{#name_sorted}}sorted-{{direction}}{{/name_sorted}}" data-sort="name">
                         {{#str}}quizname, theme_alpha{{/str}}
                     </th>
-                    <th class="{{#timeopen_sorted}}sorted-{{direction}}{{/timeopen_sorted}}" data-sort="timeopen">
+                    <th style="color:#fff;" class="{{#timeopen_sorted}}sorted-{{direction}}{{/timeopen_sorted}}" data-sort="timeopen">
                         {{#str}}timeopen, theme_alpha{{/str}}
                     </th>
-                    <th class="{{#timeclose_sorted}}sorted-{{direction}}{{/timeclose_sorted}}" data-sort="timeclose">
+                    <th style="color:#fff;" class="{{#timeclose_sorted}}sorted-{{direction}}{{/timeclose_sorted}}" data-sort="timeclose">
                         {{#str}}timeclose, theme_alpha{{/str}}
                     </th>
                 </tr>
