--- a/theme/alpha/templates/core/loginform.mustache
+++ b/theme/alpha/templates/core/loginform.mustache
@@ -201,13 +201,9 @@
                     {{/customloginlogo}}
                 </div>
             {{/loginlogooutside}}
-
-            {{#loginintrotext}}
-                <div class="rui-loginpage-intro-content mb-3 text-center">
-                    {{{loginintrotext}}}
-                </div>
-            {{/loginintrotext}}
-
+        <div class="rui-loginpage-intro-content mb-3 mt-3 text-center login-page-content">
+            <p> Login into your account</p>
+        </div>
         </div>
          {{^loginidprovtop}}
             {{#hasidentityproviders}}
