--- a/theme/alpha/templates/nav-drawer.mustache
+++ b/theme/alpha/templates/nav-drawer.mustache
@@ -127,11 +127,11 @@
             <li class="nav-item"><a class="nav-link report-one" href="">Course Report</a></li>
             <ul class="child-submenu">
                 <li class=""><a class="nav-link" href="{{ config.wwwroot }}/theme/alpha/reports.php">Enrolled Course Progress</a></li>
-                <li class=""><a class="nav-link" href="">Courses By Groups</a></li>
+                <li class=""><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/courses_by_groups.php">Courses By Groups</a></li>
             </ul>
             <li class="nav-item"><a class="nav-link report-two" href="">Visitors Report</a></li>
             <ul class="child-submenu">
-                <li class=""><a class="nav-link" href="">Guest Logins Report</a></li>
+                <li class=""><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/guest_logins_report.php">Guest Logins Report</a></li>
             </ul>
             <li class="nav-item"><a class="nav-link report-three" href="">System Report</a></li>
             <ul class="child-submenu">
