course_navigation_bug

--- a/theme/alpha/templates/tmpl-frontpage.mustache
+++ b/theme/alpha/templates/tmpl-frontpage.mustache
@@ -83,7 +83,7 @@
                     {{#str}} ai_learning_description, theme_alpha {{/str}}
                 </p>
                 <div class="banner-buttons">                 
-                    <a href="https://lms.atlearn.in/login/index.php" class="text-sm md:text-size-15 font-semibold text-whiteColor bg-whiteColor border border-whiteColor px-5 md:px-30px py-3 md:py-4 hover:text-whiteColor hover:bg-darkblack rounded inline-block mr-6px md:mr-30px shadow-hero-action">
+                    <a href="https://lms.atlearn.in/course/edit.php?category=2&returnto=catmanage" class="text-sm md:text-size-15 font-semibold text-whiteColor bg-whiteColor border border-whiteColor px-5 md:px-30px py-3 md:py-4 hover:text-whiteColor hover:bg-darkblack rounded inline-block mr-6px md:mr-30px shadow-hero-action">
                         {{#str}} create_course, theme_alpha {{/str}}
                         <i class="icofont-long-arrow-right"></i>
                     </a>
