report-showing_menu-active_bug_fix

--- a/theme/alpha/templates/nav-drawer.mustache
+++ b/theme/alpha/templates/nav-drawer.mustache
@@ -120,19 +120,7 @@
         {{{ sidebarbb }}}
 
     </div>
-
- <li class="has-submenu">
-     <i class="fas fa-list list-icon"></i>
-      <a class="nav-link report-head" href="#">All Reports</a>
-        <ul class="submenu">
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/theme/alpha/reports.php">Enrolled Course Progress</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/courses_by_groups.php">Courses By Groups</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/guest_logins_report.php">Guest Logins Report</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/disk_usage_report.php">Disk Usage Report</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/users_never_logged_in.php">Inactive Users</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ config.wwwroot }}/local/kopere_dashboard/users_completed_course.php">Course completers</a></li>   
-        </ul>
-</li>
+{{{ output.render_custom_reports_menu }}}
     {{^topbaradminbtnon}}
         {{#output.adminheaderlink}}
             <div class="rui-drawer-footer">
