--- a/theme/alpha/templates/core_course/coursecard.mustache
+++ b/theme/alpha/templates/core_course/coursecard.mustache
@@ -34,7 +34,7 @@
         ]
     }
 }}
-<div class="rui-course-card {{#progress}}rui-progress-{{progress}}{{/progress}} {{#showcoursecategory}}rui-course-card--cat{{/showcoursecategory}}" role="listitem" data-region="course-content" data-course-id="{{{id}}}">
+<div class="mkcustom rui-course-card {{#progress}}rui-progress-{{progress}}{{/progress}} {{#showcoursecategory}}rui-course-card--cat{{/showcoursecategory}}" role="listitem" data-region="course-content" data-course-id="{{{id}}}">
 
     <div class="rui-course-card-icons">
         {{> core_course/favouriteicon }}
