--- a/theme/alpha/templates/student_list.mustache
+++ b/theme/alpha/templates/student_list.mustache
@@ -38,23 +38,19 @@
                     <th>{{#str}}name{{/str}}</th>
                     <th>{{#str}}username{{/str}}</th>
                     <th>{{#str}}email{{/str}}</th>
-                    <th>{{#str}}phone{{/str}}</th>
-                    <th>{{#str}}city{{/str}}</th>
                 </tr>
             </thead>
             <tbody>
                 {{#students}}
                 <tr>
                     <td>{{id}}</td>
-                    <td>{{fullname}}</td>
+                    <td>{{firstname}}{{lastname}}</td>
                      <td>
                         <a href="{{config.wwwroot}}/user/profile.php?id={{id}}" class="user-profile-link">
                             {{username}}
                         </a>
                     </td>
                     <td>{{email}}</td>
-                    <td>{{phone}}</td>
-                    <td>{{city}}</td>
                 </tr>
                 {{/students}}
             </tbody>
